tests/integration/pilot/test_artifacts/pilot-b69b4fcf9fb24a978e2d0f26c/TestTraffic/virtualservice/set_header/tproxy/to_tproxy/_test_context/VirtualService.2556301965.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: default
  namespace: echo-2-20468
spec:
  hosts:
  - tproxy
  http:
  - headers:
      request:
        set:
          x-custom: some-value
    route:
    - destination:
        host: tproxy
